# Proyecto1-Scheduling-Ships

./: .gitignore  CMakeLists.txt  config.txt  main.c
CEThreads/: CEThreads.c  CEThreads.h  CEthread.c  CEthread.h  CEthread_mutex.c  CEthread_mutex.h  CEthread_thread.h  CEthread_tools.c  CEthread_tools.h  main.c
GUI/: guidef.c  guidef.h
HW/: arduino-serial-lib.c  arduino-serial-lib.h
HW/test/: test.ino
Hardware/: arduino-serial-lib.c  arduino-serial-lib.h
Hardware/main/test/: test.ino
Hardware/test/: test.ino
channel_control/: channel_algorithms.c  channel_algorithms.h  channel_settings.h
gui/: config.json  gui.py
scheduling/: fcfs.c  fcfs.h  linked_list.c  linked_list.h  schedulers.c  schedulers.h
